--- a/style.css
+++ b/style.css
@@ -13,29 +13,28 @@
 }
           
 
-#caixa{
+#menu{
     width: 200px;
     height: 200px;
     background-color: black;
     border: 3px solid white;
     margin-left: 10px; 
-    margin-top: 10px;
     box-shadow: 3px 3px 5px white;
 }
 
-#relogio{
+#icone_relogio{
     width: 40px;
     height: 40px;
     margin-left: 15px;
     margin-top: 15px;
 }
-#alien{
+#icone_alien{
     width: 40px;
     height: 40px;
     margin-left: 15px;
     margin-top: 15px;
 }
-#nave{
+#icone_nave{
     width: 40px;
     height: 40px;
     margin-left: 15px;
@@ -50,4 +49,13 @@
     color: white;
     margin-left: 15px;
     margin-top: 15px;
+}
+
+    #nave{
+        position: absolute;
+        bottom: 10px;
+        left: 50%;
+        width: 100px;
+        height: 100px;
+        transition: left 0.1s ease-out;
 }
