--- a/style.css
+++ b/style.css
@@ -1,61 +1,78 @@
-
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
-.fundo{
+body {
+    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+}
+
+.container {
+    width: 100vw;
+    height: 100vh;
+}
+
+.fundo {
+    position: relative;
     background-image: url('images/background.png');
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
-    min-height: 100vh;
+    height: 100%;
 }
-          
 
-#menu{
+#menu {
     width: 200px;
     height: 200px;
     background-color: black;
     border: 3px solid white;
-    margin-left: 10px; 
+    margin-left: 10px;
+    margin-top: 10px;
     box-shadow: 3px 3px 5px white;
 }
 
-#icone_relogio{
-    width: 40px;
-    height: 40px;
-    margin-left: 15px;
-    margin-top: 15px;
-}
-#icone_alien{
-    width: 40px;
-    height: 40px;
-    margin-left: 15px;
-    margin-top: 15px;
-}
-#icone_nave{
-    width: 40px;
-    height: 40px;
-    margin-left: 15px;
-    margin-top: 15px;
+#menu ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
-.fonte{
-    display: inline-block;
-    justify-content: center;
-    padding-left: 30px; ;
+#menu li {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    gap: 10px;
+}
+
+.icones {
+    width: 40px;
+    height: 40px;
+    flex-shrink: 0;
+}
+
+.fonte {
     font-family: 'times new roman', times, serif;
     color: white;
-    margin-left: 15px;
-    margin-top: 15px;
+    font-size: 14px;
+    margin: 0;
 }
 
-    #nave{
-        position: absolute;
-        bottom: 10px;
-        left: 50%;
-        width: 100px;
-        height: 100px;
-        transition: left 0.1s ease-out;
+#nave {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    width: 100px;
+    height: 100px;
+    transition: left 0.2s ease-out;
+    
+}
+
+#icone_nave {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    
 }
